--- a/luchtacro/style.css
+++ b/luchtacro/style.css
@@ -379,6 +379,45 @@ h3 {
     padding: 2px 10px 2px 10px;
 }
 
+.schaar {
+    font-size: 15px;
+    font-family: Avenir, Verdana, Arial, "sans-serif";
+    font-weight: 400;
+    color: #fff;
+    background-color: #BE97D7;
+    border: none;
+    border-radius: 8px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    margin-right: 2px;
+    margin-left: 2px;
+    padding: 2px 10px 2px 10px;
+}
+
+.footlock {
+    font-size: 15px;
+    font-family: Avenir, Verdana, Arial, "sans-serif";
+    font-weight: 400;
+    color: #fff;
+    background-color: #6CC56E;
+    border: none;
+    border-radius: 8px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    margin-right: 2px;
+    margin-left: 2px;
+    padding: 2px 10px 2px 10px;
+}
+
+.btn {
+    cursor: pointer;
+    padding: 5px 15px 5px 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 3px;
+    margin-left: 3px;
+}
+
 .filterDiv {
     display: none;
 }
