--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,61 +1,30 @@
-  body {
-    margin: 0;
-  }
-
-  h1 {
-      text-align: center;
-  }
-  
 .slider-container {
     overflow: hidden;
-	width: 100%;
-	cursor: grab;
-	margin-top: 50px;
-	margin-bottom: 50px;
+    width: 100%;
+    cursor: grab;
 }
 
 .slider-container:active {
-	cursor: grabbing;
+    cursor: grabbing;
 }
 
-  #slides {
-    width: 100%;
-    height: 80rem;
-    white-space: nowrap;
-    font-size: 0;
-    transform: translateX(0);
-  }
-  
-  .slide {
-    width: calc(45% - 100px);
+.slider {
     height: 100%;
+    width: max-content;
+    display: flex;
+    align-items: center;
+    transform: translateX(0);
+}
+
+.slider img {
+    /*          %, container width, tot margin*/
+    width: calc(0.45 * (86vw - 60px) - 10rem);
     display: inline-block;
-    background-size: 100%;
-    /* background-position: center; */
-    /* background-color: #cccccc; */
     margin: 0 20px 0 20px;
-	  background-position: center;
-	  background-repeat: no-repeat;
-  }
-  
-  .animate {
+    cursor: grabbing;
+    pointer-events: none;
+}
+
+.slider-animate {
     transition: all .5s ease-out;
-  }
-  
-  .slide.sprong:nth-child(5) {background-image: url("../work/sprong/slide1/2P1110209.jpg");}
-  .slide.sprong:nth-child(7) {background-image: url("../work/sprong/slide1/tumblr_ppula21SJ81y8563ko3_1280.jpg");}
-  .slide.sprong:nth-child(4) {background-image: url("../work/sprong/slide1/idea3.png");}
-  .slide.sprong:nth-child(2) {background-image: url("../work/sprong/slide1/idea4.png");}
-  .slide.sprong:nth-child(1) {background-image: url("../work/sprong/slide1/zw/54520401_2127223257357918_8978362865790484480_o.jpg");}
-  .slide.sprong:nth-child(6) {background-image: url("../work/sprong/slide1/apr26afinitydiagram.jpg");}
-  .slide.sprong:nth-child(8) {background-image: url("../work/sprong/slide1/mrt15stakeholdermap.jpg");}
-  .slide.sprong:nth-child(9) {background-image: url("../work/sprong/slide1/mrt14ideasfunctions5.jpg");}
-.slide.sprong:nth-child(10) {background-image: url("../work/sprong/slide1/mrt7contextmap2.jpg");}
-  .slide.sprong:nth-child(3) {background-image: url("../work/sprong/slide1/DSC_0105recht.png");}
-
-
-  .slide.vz:nth-child(1) {background-image: url("../work/vz/41529189_1860824667331113_3393831063640866816_o.jpg");}
-.slide.vz:nth-child(2) {background-image: url("../work/vz/IMG_0140.JPG");}
-
-
-  
+}
