--- a/luchtacro/style.css
+++ b/luchtacro/style.css
@@ -340,6 +340,7 @@ h3 {
     font-family: Avenir, Verdana, Arial, "sans-serif";
     font-weight: 400;
     background-color: #E7E7E7;
+    /*background-color: #6295D9;*/
     border: none;
     border-radius: 8px;
     margin-top: 5px;
